@@ -153,6 +153,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		TMX suports 1 tileset per layer patch
 	* jszatmary:
 		QuadParticleSystem works with NPOT textures. patch.
+		Menu items are not consumed is items are not enabled
 	* jtbowden
 		RotateTo uses min distance patch
 	* kasatani:
@@ -210,6 +211,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		performance improvement on particles
 		TextureAtlas uses VBO instead of vertex array list patch
 		Director: FPSLabel uses RGBA4444 texture (patch)
+	* marcu.catalin:
+		Menu items are not consumed is items are not visible
 	* Mark Cooke:
 		Added TintTo action
 	* mark at abitofthought:
